--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tauri + Svelte + TS</title>
+    <script type="application/javascript">
+      window.global = window;
+    </script>
   </head>
 
   <body>
